# LinRasterizer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: qodana_code_quality.yml
include/: L_math.h
local/: README.md
lua-5.4.7/src/: lua.c  luac.c
mm_src/: L_window.mm
resources/GenshinImpact_Venti/: Avatar_Boy_Bow_Venti.fbx  Read Me.txt
src/: Attribute.cpp  Attribute.h  BVHTree.cpp  BVHTree.h  Box.cpp  Box.h  Box3D.cpp  Box3D.h  BresenhamLine.h  Camera.cpp  Camera.h  Color.cpp  Color.h  CommonMacro.h  Component.cpp  Component.h  Context.cpp  Context.h  DrawCallContext.cpp  DrawCallContext.h  DrawCallSetting.h  DrawUtil.h  EventSystem.cpp  EventSystem.h  FragShader.cpp  FragShader.h  GPU.cpp  GPU.h  Geometry.cpp  Geometry.h  ImageUtil.cpp  ImageUtil.h  JobSystem.cpp  JobSystem.h  LinkList.h  LuaFragShader.cpp  LuaFragShader.h  LuaShaderManager.cpp  LuaShaderManager.h  LuaVertShader.cpp  (+26 more)
src/object/: Camera.cpp  Camera.h  Component.cpp  Component.h  DrawCallNodeComponent.cpp  DrawCallNodeComponent.h  FragShader.cpp  FragShader.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshRender.cpp  MeshRender.h  Object.cpp  Object.h  Resource.cpp  Resource.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  VertShader.cpp  VertShader.h
